oxiplate-derive/tests/broken/char/multiple-chars.stderr
error: More than one character present in character literal. Consider using `"` instead of `'` to use a string literal instead.
 --> tests/broken/char/multiple-chars.rs:4:24
  |
4 | #[oxiplate_inline(r"{{ 'hi' }}")]
  |                        ^^^^
